<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/selectCnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transaction_filter"
        android:fontFamily="@font/cera_pro_medium"
        android:textSize="@dimen/_12ssp"
        android:gravity="start"
        android:layout_marginStart="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        />

    <CheckBox
        android:id="@+id/chk1"
        android:buttonTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:fontFamily="@font/cera_pro_medium"
        android:textSize="@dimen/_10ssp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/selectCnt"
        android:layout_marginStart="@dimen/_15sdp"
        android:textColor="@color/black"
        />

    <CheckBox
        android:id="@+id/chk2"
        android:buttonTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voucher_purchase"
        android:fontFamily="@font/cera_pro_medium"
        android:textSize="@dimen/_10ssp"
        android:clickable="false"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/chk1"
        android:layout_marginStart="@dimen/_15sdp"
        android:textColor="@color/black"
        />
    <CheckBox
        android:id="@+id/chk3"
        android:buttonTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transfer"
        android:fontFamily="@font/cera_pro_medium"
        android:textSize="@dimen/_10ssp"
        android:clickable="false"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/chk2"
        android:layout_marginStart="@dimen/_15sdp"
        android:textColor="@color/black"
        />
    <CheckBox
        android:id="@+id/chk4"
        android:buttonTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prepaid_topup"
        android:fontFamily="@font/cera_pro_medium"
        android:textSize="@dimen/_10ssp"
        android:clickable="false"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/chk3"
        android:layout_marginStart="@dimen/_15sdp"
        android:textColor="@color/black"
        />

    <CheckBox
        android:id="@+id/chk5"
        android:buttonTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/postpaid_topup"
        android:fontFamily="@font/cera_pro_medium"
        android:textSize="@dimen/_10ssp"
        android:clickable="false"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/chk4"
        android:layout_marginStart="@dimen/_15sdp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:padding="@dimen/_10sdp"
        android:fontFamily="@font/cera_pro_medium"
        android:textSize="@dimen/_12ssp"
        android:layout_marginEnd="@dimen/_15ssp"
        app:layout_constraintTop_toBottomOf="@id/chk5"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ripple_black"
        android:textColor="@color/purple_500"
        />

    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:padding="@dimen/_10sdp"
        android:fontFamily="@font/cera_pro_medium"
        android:textSize="@dimen/_12ssp"
        android:background="@drawable/ripple_black"
        app:layout_constraintTop_toBottomOf="@id/chk5"
        app:layout_constraintEnd_toStartOf="@id/btnSend"
        android:textColor="@color/purple_500"
        />


</androidx.constraintlayout.widget.ConstraintLayout>