<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/HomeLoginBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom"
    android:background="@color/transprant"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_bottom_sheet"
        android:layout_marginTop="@dimen/_35sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp">

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/topup_successful"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        android:fontFamily="@font/cera_pro_medium"
        android:gravity="center"
        android:layout_marginTop="@dimen/_35sdp"
        android:textColor="@android:color/black"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer"
            android:textSize="@dimen/_8ssp"
            android:fontFamily="@font/cera_pro_medium"
            android:gravity="start"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/green"/>

    <!-- Customer Info -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_number"
             />

        <TextView
            android:id="@+id/tvCustmor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_27640101010"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/cera_pro_medium"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textSize="@dimen/_8ssp"
            android:fontFamily="@font/cera_pro_medium"
            android:gravity="start"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/green"/>

    <!-- Amount Info -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_wallet"
             />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_200_00_zar"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2020012204805398910000011"
            android:textSize="@dimen/_8ssp"
            android:fontFamily="@font/cera_pro_medium"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/gray_disable_text"/>

    <!-- Buttons -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:gravity="center">
        <ImageView
            android:contentDescription="@string/temp_null"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="@id/btnPrint"
            app:layout_constraintStart_toStartOf="@id/btnPrint"
            app:layout_constraintBottom_toBottomOf="@id/btnPrint"
            android:src="@drawable/ic_print"
            android:layout_marginStart="@dimen/_10sdp"/>

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:id="@+id/btnPrint"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@id/btnNext"
            android:textSize="@dimen/_10sdp"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/print_receipt"
            android:fontFamily="@font/cera_pro_medium"
            android:textStyle="bold"
            app:layout_constraintHorizontal_weight="1"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@drawable/yello_bg_curve"
            android:textColor="@color/black"
            android:layout_weight="1" />

        <TextView
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnPrint"
            android:layout_marginStart="@dimen/_5sdp"
            android:gravity="center"
            android:id="@+id/btnNext"
            android:textAllCaps="false"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintHorizontal_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/dismiss"
            android:fontFamily="@font/cera_pro_medium"
            android:textStyle="bold"
            android:background="@drawable/selector_button_secondary_half"
            android:textColor="@color/black"
            android:layout_weight="1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>

    <!-- Success Icon -->
    <ImageView
        android:contentDescription="@string/temp_null"
        android:id="@+id/imgCheck"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:src="@drawable/ic_check"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>